tests/Column/expected
[<[<"Bob", 12, "blue"], [<"Alice", 17, "green"], [<"Eve", 13, "red"]]

[<"Bob", "Alice", "Eve"]
[<12, 17, 13]
Error: Can't find an implementation for Field StudentSchema "grade" ?type.

(Interactive):1:12--1:19
 1 |     column "grade" students
                ^^^^^^^


[<[<"Bob"], [<"Alice"], [<"Eve"]]
[<[<"Bob", 12], [<"Alice", 17], [<"Eve", 13]]

[<[<"Bob", 12, "blue"], [<"Alice", 17, "green"], [<"Eve", 13, "red"]]

[<[<"Bob", 12, "blue", 87], [<"Alice", 17, "green", 85], [<"Eve", 13, "red", 77]]

[<"Bob", "Alice", "Eve"]
[<12, 17, 13]
[<87, 85, 77]

[<[<"Bob", 12, "blue", "A"], [<"Alice", 17, "green", "A"], [<"Eve", 13, "red", "B"]]

[<[<"Bob", 12, "blue"], [<"Alice", 17, "green"], [<"Eve", 13, "red"]]

[<[<"Bob", 12, "blue", 87, "A"], [<"Alice", 17, "green", 85, "A"], [<"Eve", 13, "red", 77, "B"]]

[<[<"Bob", "blue"], [<"Alice", "green"], [<"Eve", "red"]]
[<[<"Bob", 12], [<"Alice", 17], [<"Eve", 13]]
Error: Can't find an implementation for Field StudentSchema "grade" ?type.

(Interactive):1:16--1:23
 1 |     dropColumn "grade" students
                    ^^^^^^^


[<[<"Bob", "blue"], [<"Alice", "green"], [<"Eve", "red"]]
[<[<"Bob"], [<"Alice"], [<"Eve"]]

[<MkDPair "name" (There Here), MkDPair "favorite color" Here]
Error: Can't find an implementation for All (TypeHas (\{arg:0} => arg = String)) [<("name" :! String), ("age" :! Nat), ("favorite color" :! String)].

(Interactive):1:5--1:29
 1 |     allColumns StudentSchema
         ^^^^^^^^^^^^^^^^^^^^^^^^


